--- a/styles.css
+++ b/styles.css
@@ -560,3 +560,20 @@ body {
         --btn-padding: 12px 16px;
     }
 }
+
+/* Google Pixel 7 pro */
+@media (width: 411px) and (height: 915px) and (resolution: 3dppx) {
+    .ui-btn {
+        top: 5.7rem;
+        right: 5rem;
+        --font-size: 10px;
+        --btn-padding: 12px 16px;
+    }
+
+    .scroll-top-btn {
+        top: 5.7rem;
+        left: 5rem;
+        --font-size: 10px;
+        --btn-padding: 12px 16px;
+    }
+}
